--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,529 @@
-.App {
-  text-align: center;
+ul{
+  list-style: none;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+
+/*  Header  */
+
+.header{
+  display: flex;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  padding-left: 400px;
+  padding-right: 400px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#logo-docplanner{
+  height: 33px;
+  width: 268px;
+  padding-left: 40px;
+}
+
+.nav-bar {
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.nav-menu {
+  display: flex;
+  list-style: none;
+  padding-right: 40px;
+}
+
+.nav-menu li {
+  padding-left: 20px;
+  position: relative;
+}
+.nav-menu li a {
+  text-decoration: none;
+  color: #ababab;
+  padding-bottom: 20px;
+}
+.nav-menu li a:hover {
+  color: #00c3a5;
+}
+
+.dropdown-list {
+  display: none;
+  width: 215px;
+  position: absolute;
+  top: 35px;
+  right: 0;
+  box-shadow: 10px 10px 22px -6px rgba(171,171,171,1);
+}
+
+.nav-menu li:hover .dropdown-list {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  padding: 0;
+  margin: 0;
+}
+
+.dropdown-list a {
+  color: #ababab;
+}
+
+.dropdown-list li {
+  list-style: none;
+}
+
+.dropdown-list a:hover {
+  color: #00c3a5;
+}
+
+.dropdown-list li {
+  padding: 10px 10px;
+}
+
+.dropdown-list li:hover {
+  background-color: #f6f8f8;
+}
+
+
+/*  Intro-section  */
+
+.intro-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 240px;
+    margin-top: 60px;
+}
+.intro-section h1 {
+    font-size: 2.125rem;
+    color: #00b39b;
+    margin: 1em 0;
+    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-weight: 300;
+    letter-spacing: .3px;
+}
+
+/*  Patient-Doctor-Section  */
+
+.patient-box {
+  width: 475px;
+  height: 400px;
+  border: 0;
+  border-radius: 10px;
+  background-color: rgb(0, 204, 177);
+  margin-top: 60px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.doctor-box {
+  width: 475px;
+  height: 400px;
+  border: 0;
+  border-radius: 10px;
+  background-color: rgb(61, 131, 223);
+  margin-top: 60px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.para-marg{
+  margin-left: 20px;
+  margin-right: 20px;
+  font-size: 14px;
+}
+
+.pat-doc-text{
+  width: 475px;
+}
+
+.patient-doctor-section {
+  display: flex;
+  justify-content: center;
+}
+
+.p-d-section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 700px;
+}
+
+.patient-doctor-img {
+  height: 249px;
+  width: 398px;
+}
+
+.country-name {
+  align-items: center;
+  background: transparent;
+  border: 0;
+  margin: 10px 0 0 20px;
+  border-radius: 5px;
+  height: 40px;
+  margin-right: 40px;
+  overflow: visible !important;
+  text-transform: uppercase;
+  background-color: white;
+  padding: 0 5px;
+}
+
+.country-name:hover {
+  background-color: #f6f8f8; 
+}
+
+.img-select-button {
+  display: flex;
+}
+
+.patient-doctor-section h2 {
+  font-size: 16px;
+  opacity: 1;
+  font-weight: 400;
+  margin: 20px 0 0;
+  color: hsla(0,0%,100%,.7);
+  padding-left: 20px;
+  margin-bottom: 20px;
+}
+.patient-doctor-section h1 {
+  color: white;
+  font-weight: 300;
+  letter-spacing: .3px;
+  padding-left: 20px;
+  margin: 0;
+}
+
+.marg-pad{
+  margin: 0;
+  padding: 0;
+}
+
+.empty-li{
+  width: 230px;
+}
+
+.marg-in-box{
+  margin-top: 20px;
+}
+
+/*   Company Section  */
+
+.company-section {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  width: 1000px;
+  padding-left: 25%;
+  padding-bottom: 40px;
+}
+
+.company-section svg {
+  height: 20px;
+  padding: 10px 0 0 0;
+  fill: #ababab;
+}
+
+.company-section svg:hover {
+  fill: #00b39b;
+}
+
+.Arrang-logo {
+  display: flex;
+  list-style: none;
+  flex-wrap: wrap;
+  padding: 0;
+}
+
+.Arrang-logo li{
+  width: 180px;
+}
+
+.company-section h1 {
+  width: 250px;
+  color: #00b39b;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: .3px;
+  padding: 0;
+  margin: 0;
+}
+
+
+/*  Banner Section  */
+
+.banner-section {
+  height: 560px;
+  background: #e5faf8;
+  background-image: linear-gradient(-45deg,rgba(0,204,177,.01) 5%,rgba(61,199,223,.1));
+  overflow: hidden;
+}
+
+.inner-content {
+  display: flex;
+  justify-content: center;
+  padding: 40px 0 0;
+}
+
+.banner-intro {
+  margin-top: 50px;
+}
+
+.banner-section h1 {
+  font-size: 2.125rem;
+  color: #00b39b;
+  margin: 0;
+  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-weight: 300;
+  letter-spacing: .3px;
+}
+
+.banner-section p {
+  color: #747474;
+}
+
+.background-logo {
+  padding-right: 100px;
+  margin-top: 20px;
+}
+
+.box-list {
+  display: flex;
+  padding-left: 40px;
+}
+
+.box-list ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  padding-left: 20px;
+}
+
+.box-list ul:first-child {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  padding-top: 20px;
+}
+
+.itemsStyle{
+  padding: 0;
+  margin: 0;
+  height: 220px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.leader {
+  height: 220px;
+  width: 198px;
+  background-color: white;
+  margin: 0;
+  padding: 0;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.patient {
+  height: 220px;
+  width: 198px;
+  background-color: white;
+  margin: 0;
+  padding: 0;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.appointments {
+  height: 220px;
+  width: 198px;
+  background-color: white;
+  margin: 0;
+  padding: 0;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.doctor {
+  height: 220px;
+  width: 198px;
+  background-color: white;
+  margin: 0;
+  padding: 0;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.box-list ul li h3 {
+  font-weight: 300;
+  letter-spacing: .3px;
+  font-size: 22px;
+  color: #00b39b;
+  margin: 0;
+  padding: 0;
+}
+
+.box-list ul li p {
+  font-size: 12px;
+  font-weight: 400;
+  color: #747474;
+  margin: 0;
+  padding: 0;
+}
+
+/*   Office Location  */
+
+.office-places {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.office-places h1 {
+  font-size: 2.1428571429em;
+  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-weight: 300;
+  letter-spacing: .3px;
+  color: #00b39b;
+  text-align: center;
+}
+
+.office-places p {
+  font-size: .875em;
+  text-align: center;
+  font-weight: 400;
+  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+  color: #747474;
+}
+
+.image-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  border: 1px solid rgba(0,0,0,.03);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  margin-bottom: 22.5px;
+  margin-top: -10px;
+  padding: 0 15px;
+}
+
+.gallery img {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.gallery ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  justify-content: space-between;
+  padding: 40px 0 0 0;
+  font-weight: 400;
+}
+
+.gallery a {
+  text-decoration: none;
+  color: #747474;
+  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+
+.gallery ul li {
+  margin-top: 22.5px;
+  height: 355px;
+}
+
+.gallery {
+  width: 995px;
+  height: 900px;
+}
+
+.gallery ul li:hover {
+  box-shadow: 10px 10px 22px -6px rgba(171,171,171,1);
+}
+
+.image-box button {
+  border: 0;
+  border-radius: 5px;
+  background-color: #3d83df;
   color: white;
+  height: 30px;
+  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-weight: 700;
 }
 
-.App-link {
-  color: #61dafb;
+.image-box button:hover {
+  background-color: #1662c6;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+  border-top: 1px solid rgba(0,0,0,.03);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 10px;
+}
+footer > p:last-child {
+  text-align: center;
+}
+footer a {
+  text-decoration: none;
+  color: #3d83df;
+  font-weight: 400;
+  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+footer a:hover {
+  text-decoration: underline;
+}
+footer p {
+  font-size: .75em;
+  color: #ababab;
+  display: flex;
+}
+
+.country-line{
+  display: flex;
+}
+
+.unlink-style{
+  text-decoration: none;
+  color: #747474;
+}
+
+.unlink-style:hover{
+  text-decoration: none;
+  color: #747474;
 }
